--- a/test.ipynb
+++ b/test.ipynb
@@ -2,23 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 'abcdef'\n",
+    "# a[0:3] = reversed(a[0:3])\n",
+    "# a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 34, 6, 99, 200, 22, 122}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 3, 122, 6, 2, 4, 3, 1, 2, 22, 34, 22, 99, 200]\n",
+    "print(set(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['(', '[', '{']"
+       "1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "match_dict = {')' : '(', ']' : '[', '}' : '{'}\n",
-    "list(match_dict.values())"
+    "from collections import deque\n",
+    "a = deque()\n",
+    "a.append(1)\n",
+    "a.popleft()"
    ]
   },
   {
@@ -26,7 +57,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# in list : o(n)\n",
+    "# in set  : o(1)\n",
+    "# in dict : o(1)"
+   ]
   }
  ],
  "metadata": {
